# CodeWiki

./: AGENTS.md  README.md
codewiki/cli/: config_manager.py  main.py
codewiki/cli/adapters/: doc_generator.py
codewiki/cli/commands/: config.py  generate.py
codewiki/cli/models/: config.py
codewiki/cli/utils/: repo_validator.py  validation.py
codewiki/mcp/: server.py
codewiki/src/: config.py
codewiki/src/be/: AGENTS.md  agent_orchestrator.py  cluster_modules.py  component_id_resolve.py  documentation_generator.py  llm_services.py  prompt_template.py  utils.py
codewiki/src/be/agent_tools/: generate_sub_module_documentations.py  read_code_components.py
codewiki/src/be/dependency_analyzer/analysis/: call_graph_analyzer.py  cloning.py
codewiki/src/be/dependency_analyzer/analyzers/: c.py  cpp.py  java.py  python.py
demo/: .gitignore  README.md  pyproject.toml
demo/src/demo/: __init__.py  cli.py
demo/src/demo/core/: __init__.py  codewiki_bridge.py  dynamic_docs.py  graph.py  leaf_report.py  module_tree.py  package_index.py  pipeline.py  rubric_eval.py
demo/src/demo/models/: __init__.py  manifest.py
demo/src/demo/utils/: git.py
docs/: codewiki-llm-io.md  design-java-historical-analysis.md
docs/samples/: 0.1-REPOSITORY_OVERVIEW.md  1.1-analysis_manifest.json  1.2-graph.json  1.3-module_tree.json  1.4-entrypoints.json  2.1-leaf_order-service-core.md  2.2-rubric_eval.sample.json  README.md
scripts/: bootstrap_codewiki.sh  check_requirements.sh  export_portable_codewiki.sh  native_codewiki_generate.sh  smoke_analyze.sh
(+1 files in other folders)
